--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jordan Janzen",
   "main": "./lib/index.js",
   "exports": "./lib/index.js",
+  "repository": "https://github.com/jordandrako/eslint-plugin-sentence-case-exclude",
   "scripts": {
     "lint": "npm-run-all \"lint:*\"",
     "lint:eslint-docs": "npm-run-all \"update:eslint-docs -- --check\"",
